# boatrace-project

./: .gitignore  PROJECT.md  PROJECT2.md  PROJECT5.md  boatrace_rough_model.txt  collect_training_data.py  fetch_yesterday_data.py  main.py  manifesto.md  predict_today_races.py  pyproject.toml  today_prediction.md
data/: entries.csv  model.pkl  races.csv  results.csv  training_base.csv  training_featured.csv
src/: collect_data_phase1.py  feature_engineering_phase3.py  train_model_phase4.py  transform_data_phase2.py
tempt_tests_sandbox/: PROJECT3.md  PROJECT4.md  boatrace_training_data.csv  test_fetch.py  train_model.py
