[project]
name = "05boatrace"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "lightgbm>=4.6.0",
    "matplotlib>=3.10.8",
    "pandas>=3.0.1",
    "pyjpboatrace",
    "scikit-learn>=1.8.0",
]

[tool.uv.workspace]
members = [
    "pyjpboatrace",
]

[tool.uv.sources]
pyjpboatrace = { workspace = true, editable = true }
